objects/SocialPost.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <description>Social: Field to indicate what type of approval a post is submitted for</description>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Offensive Words</fullName>
                </value>
                <value>
                    <fullName>Verified User/High Follower Count</fullName>
                </value>
                <value>
                    <fullName>Manual Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awaiting_Customer_Response_Timestamp__c</fullName>
        <description>Social Care: Timestamp of when an agent responds</description>
        <label>Awaiting Customer Response Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Follow_Up_Timestamp__c</fullName>
        <description>Social Care: Timestamp of when a customer posts</description>
        <label>Customer Follow Up Timestamp</label>
        <type>DateTime</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Social_Misspelled_Words</fullName>
        <active>true</active>
        <description>Social Care: restriction from posting misspelled words</description>
        <errorConditionFormula>AND(IsOutbound =TRUE,
OR(
CONTAINS(Content,&quot;accomodate&quot;),
CONTAINS(Content,&quot;accomodation&quot;),
CONTAINS(Content,&quot;acheive&quot;),
CONTAINS(Content,&quot;accross&quot;),
CONTAINS(Content,&quot;agressive&quot;), 
CONTAINS(Content,&quot;agression&quot;),
CONTAINS(Content,&quot;apparantly&quot;),
CONTAINS(Content,&quot;appearence&quot;),
CONTAINS(Content,&quot;arguement&quot;),
CONTAINS(Content,&quot;assasination&quot;),
CONTAINS(Content,&quot;basicly&quot;),
CONTAINS(Content,&quot;begining&quot;),
CONTAINS(Content,&quot;beleive&quot;), 
CONTAINS(Content,&quot;belive&quot;),
CONTAINS(Content,&quot;bizzare&quot;),
CONTAINS(Content,&quot;buisness&quot;),
CONTAINS(Content,&quot;calender&quot;),
CONTAINS(Content,&quot;Carribean&quot;),
CONTAINS(Content,&quot;cemetary&quot;),
CONTAINS(Content,&quot;chauffer&quot;),
CONTAINS(Content,&quot;collegue&quot;),
CONTAINS(Content,&quot;comming&quot;),
CONTAINS(Content,&quot;commitee&quot;),
CONTAINS(Content,&quot;completly&quot;),
CONTAINS(Content,&quot;concious&quot;),
CONTAINS(Content,&quot;curiousity&quot;),
CONTAINS(Content,&quot;definately&quot;),
CONTAINS(Content,&quot;dilemna&quot;),
CONTAINS(Content,&quot;dissapear&quot;),
CONTAINS(Content,&quot;dissapoint&quot;),
CONTAINS(Content,&quot;ecstacy&quot;),
CONTAINS(Content,&quot;embarass&quot;),
CONTAINS(Content,&quot;enviroment&quot;),
CONTAINS(Content,&quot;existance&quot;),
CONTAINS(Content,&quot;Farenheit&quot;),
CONTAINS(Content,&quot;familar&quot;),
CONTAINS(Content,&quot;finaly&quot;),
CONTAINS(Content,&quot;florescent&quot;),
CONTAINS(Content,&quot;foriegn&quot;),
CONTAINS(Content,&quot;forseeable&quot;),
CONTAINS(Content,&quot;fourty&quot;),
CONTAINS(Content,&quot;foward&quot;),
CONTAINS(Content,&quot;freind&quot;),
CONTAINS(Content,&quot;futher&quot;),
CONTAINS(Content,&quot;jist&quot;),
CONTAINS(Content,&quot;glamourous&quot;),
CONTAINS(Content,&quot;goverment&quot;),
CONTAINS(Content,&quot;gaurd&quot;),
CONTAINS(Content,&quot;happend&quot;),
CONTAINS(Content,&quot;harrass&quot;),
CONTAINS(Content,&quot;harrassment&quot;),
CONTAINS(Content,&quot;honourary&quot;),
CONTAINS(Content,&quot;humourous&quot;),
CONTAINS(Content,&quot;idiosyncracy&quot;),
CONTAINS(Content,&quot;immediatly&quot;),
CONTAINS(Content,&quot;incidently&quot;),
CONTAINS(Content,&quot;independant&quot;),
CONTAINS(Content,&quot;interupt&quot;)))</errorConditionFormula>
        <errorMessage>It appears as if you have misspelled a word.  Please review, adjust and resend your post.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Social_Misspelled_words_2</fullName>
        <active>true</active>
        <description>Social Care: restriction from posting misspelled words</description>
        <errorConditionFormula>AND(IsOutbound=TRUE,
OR(
CONTAINS(Content,&quot;irresistable&quot;),
CONTAINS(Content,&quot;knowlege&quot;),
CONTAINS(Content,&quot;liase&quot;),
CONTAINS(Content,&quot;liason&quot;),
CONTAINS(Content,&quot;lollypop&quot;),
CONTAINS(Content,&quot;millenium&quot;),
CONTAINS(Content,&quot;millenia&quot;),
CONTAINS(Content,&quot;Neandertal&quot;),
CONTAINS(Content,&quot;neccessary&quot;),
CONTAINS(Content,&quot;noticable&quot;),
CONTAINS(Content,&quot;ocassion&quot;),
CONTAINS(Content,&quot;occassion&quot;),
CONTAINS(Content,&quot;occured&quot;),
CONTAINS(Content,&quot;occuring&quot;),
CONTAINS(Content,&quot;occurance&quot;),
CONTAINS(Content,&quot;occurence&quot;),
CONTAINS(Content,&quot;pavillion&quot;),
CONTAINS(Content,&quot;persistant&quot;),
CONTAINS(Content,&quot;pharoah&quot;),
CONTAINS(Content,&quot;peice&quot;),
CONTAINS(Content,&quot;politican&quot;),
CONTAINS(Content,&quot;Portugese&quot;),
CONTAINS(Content,&quot;posession&quot;),
CONTAINS(Content,&quot;prefered&quot;),
CONTAINS(Content,&quot;prefering&quot;),
CONTAINS(Content,&quot;propoganda&quot;),
CONTAINS(Content,&quot;publically&quot;),
CONTAINS(Content,&quot;realy&quot;),
CONTAINS(Content,&quot;recieve&quot;),
CONTAINS(Content,&quot;refered&quot;),
CONTAINS(Content,&quot;refering&quot;),
CONTAINS(Content,&quot;religous&quot;),
CONTAINS(Content,&quot;rember&quot;),
CONTAINS(Content,&quot;remeber&quot;),
CONTAINS(Content,&quot;resistence&quot;),
CONTAINS(Content,&quot;sence&quot;),
CONTAINS(Content,&quot;seperate&quot;),
CONTAINS(Content,&quot;seige&quot;),
CONTAINS(Content,&quot;succesful&quot;),
CONTAINS(Content,&quot;supercede&quot;),
CONTAINS(Content,&quot;suprise&quot;),
CONTAINS(Content,&quot;tatoo&quot;),
CONTAINS(Content,&quot;tendancy&quot;),
CONTAINS(Content,&quot;therefor &quot;),
CONTAINS(Content,&quot;threshhold&quot;),
CONTAINS(Content,&quot;tommorow&quot;),
CONTAINS(Content,&quot;tommorrow&quot;),
CONTAINS(Content,&quot;tounge&quot;),
CONTAINS(Content,&quot;truely&quot;),
CONTAINS(Content,&quot;unforseen&quot;),
CONTAINS(Content,&quot;unfortunatly&quot;),
CONTAINS(Content,&quot;untill&quot;),
CONTAINS(Content,&quot;wierd&quot;),
CONTAINS(Content,&quot;whereever&quot;)))</errorConditionFormula>
        <errorMessage>It appears as if you have misspelled a word.  Please review, adjust and resend your post</errorMessage>
    </validationRules>
</CustomObject>